<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="#fff"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <TextView
                android:textStyle="bold"
                android:textAllCaps="true"
                android:padding="16dp"
                android:text="@string/str_form_title"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                tools:ignore="UselessLeaf">

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_field_name"/>
                <EditText
                    android:id="@+id/edt_name"
                    android:hint="@string/str_name"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_field_last_name"/>
                <EditText
                    android:id="@+id/edt_last_name"
                    android:hint="@string/str_last_name"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_field_phone_number"/>
                <EditText
                    android:id="@+id/edt_phone_number"
                    android:hint="@string/str_phone_number"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_fiel_student_code"/>
                <EditText
                    android:id="@+id/edt_student_code"
                    android:hint="@string/str_student_code"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_field_address"/>
                <EditText
                    android:id="@+id/edt_address"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <fragment
                    android:id="@+id/mainMap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    tools:context="com.example.emisor.MainActivity" />


                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_marginVertical="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_captured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/str_content_description_img_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_take_photo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_take_photo"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_btn_take_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send_to_receptor_app"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="#fff"
                    android:text="@string/str_btn_send_to_receiver_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>





            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>